ajustado documentação e pipeline do github actions
