# src/controllers/index/controllerIndex.js
@@ -1,7 +1,0 @@
-class Index {
-    index(req, res){
-       res.status(200).json({service: "api-bus-schedules"})
-    }
-}
-
-module.exports = Index;
