# src/routes/maps/mapRoutes.js
@@ -8,6 +8,24 @@ mapsRoutes
   .get(maps.list, ()=>{
     // #swagger.tags = ['Maps']
   })
+
+mapsRoutes
+  .route('/api-bus-schedules/api/v1/maps/create')
+  .post(maps.list, ()=>{
+    // #swagger.tags = ['Maps']
+})
+
+mapsRoutes
+  .route('/api-bus-schedules/api/v1/maps/update')
+  .patch(maps.list, ()=>{
+    // #swagger.tags = ['Maps']
+})
+
+mapsRoutes
+  .route('/api-bus-schedules/api/v1/maps/delete')
+  .delete(()=>{
+  // #swagger.tags = ['Maps']
+})
   
 
 module.exports = mapsRoutes;
